--- a/src/main/resources/pages/leadz/watches/men/Men-13.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-13.html
@@ -23,17 +23,17 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Watch 1" class="active" />
-        <img src="../../../assets/watches/1/watch%201%20-%208.webp" alt="Watch 2" />
-        <img src="../../../assets/watches/1/watch%201%20-%209.webp" alt="Watch 3" />
-        <img src="../../../assets/watches/1/watch%201%20-%2010.webp" alt="Watch 4" />
-        <img src="../../../assets/watches/1/watch%201%20-%2011.webp" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-1.jpg" alt="Watch 13" class="active" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-3.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-2.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-4.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-5.jpg" alt="Watch 13" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/13/M13-1.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -58,19 +58,19 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="6,500" data-original="8700.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-2.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-3.jpg" alt="Watch" />
                 <div class="color-label">Green</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-4.jpg" alt="Watch" />
                 <div class="color-label">Brown</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-5.jpg" alt="Watch" />
                 <div class="color-label">Blue-Gold</div>
             </div>
         </div>
