--- a/src/main/resources/pages/leadz/watches/women/Women-1.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-1.html
@@ -23,17 +23,29 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Watch 1" class="active" />
-        <img src="../../../assets/watches/1/watch%201%20-%208.webp" alt="Watch 2" />
-        <img src="../../../assets/watches/1/watch%201%20-%209.webp" alt="Watch 3" />
-        <img src="../../../assets/watches/1/watch%201%20-%2010.webp" alt="Watch 4" />
-        <img src="../../../assets/watches/1/watch%201%20-%2011.webp" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-15.jpg" alt="Watch 1" class="active" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-1.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-2.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-13.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-14.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-15.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-3.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-4.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-5.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-7.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-8.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-9.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-10.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-11.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-12.jpg" alt="Watch 1" />
+
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/women/1/W1-15.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -58,39 +70,39 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch" />
                 <div class="color-label">Silver-Gold-White</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-4.jpg" alt="Watch" />
                 <div class="color-label">Silver-Gold-Silver</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-5.jpg" alt="Watch" />
                 <div class="color-label">Silver-Gold-Gold</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
-                <div class="color-label">SIlver-Gold-Black</div>
+                <img src="../../../../assets/leadz/watches/women/1/W1-7.jpg" alt="Watch" />
+                <div class="color-label">Silver-Gold-Black</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-11.jpg" alt="Watch" />
                 <div class="color-label">Gold</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-8.jpg" alt="Watch" />
                 <div class="color-label">Gold-Silver</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-10.jpg" alt="Watch" />
                 <div class="color-label">Gold-Black</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-9.jpg" alt="Watch" />
                 <div class="color-label">Gold-White</div>
             </div>
             <div class="color-option" data-price="3,500" data-original="4600.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/1/W1-12.jpg" alt="Watch" />
                 <div class="color-label">Gold-Blue</div>
             </div>
         </div>
