--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -35,7 +35,7 @@
   <!--WOMEN 1-->
   <a href="leadz/watches/women/Women-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/1/watch 1 - 1.webp" alt="Womens  Watch">
+      <img src="../assets/leadz/watches/women/1/W1-15.jpg" alt="Womens Watch">
       <h4>HERYI Ladies Watch (Free Box)</h4>
       <div class="price">
         <span class="currency">LKR</span>
