--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -183,7 +183,7 @@
   <!--WOMEN 1-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens  Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/1/W1-15.jpg" alt="Womens  Watch">
       <h4>HERYI Ladies Watch (Free Box)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -387,7 +387,7 @@
   <!--MEN 12-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-12.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/12/M12-3.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -400,7 +400,7 @@
   <!--MEN 13-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-13.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/13/M13-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -413,7 +413,7 @@
   <!--MEN 14-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-14.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/14/M14-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -426,7 +426,7 @@
   <!--MEN 15-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-15.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/15/M15-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -439,7 +439,7 @@
   <!--MEN 16-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-16.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/16/M16-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -452,7 +452,7 @@
   <!--WOMEN 5-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-5.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/5/W5-1.jpg" alt="Womens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -465,7 +465,7 @@
   <!--WOMEN 6-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-6.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/6/W6-1.jpg" alt="Womens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -478,7 +478,7 @@
   <!--MEN 17-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-17.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/17/M17-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -491,7 +491,7 @@
   <!--MEN 18-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-18.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/18/M18-1.jpg" alt="Mens Watch">
       <h4>NAVIFORCE</h4>
       <div class="price">
         <span class="currency">LKR</span>
