--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -336,53 +336,10 @@
     </div>
   </a>
 
-
-</div>
-
-
-<hr class="section-divider">
-
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
 
-<h2 style="color: #917c4c">Special Offer</h2>
-
-<div class="special-offer-wrapper">
-
-  <div class="special-offer">
-    <!-- Special‑offer items -->
-    <a href="src/main/resources/pages/couples/Couple-2.html?id=10" class="offer-link offer-item">
-      <div class="offer-watch">
-        <div class="offer-image">
-          <video autoplay muted loop playsinline>
-            <source src="src/main/resources/assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
-          <!--<img src="../../assets/couples/2/couple 2 - 14.png" alt="Couple Watch">-->
-        </div>
-
-        <div class="offer-details">
-          <h4>Couple POEDAGAR Luxury Watches</h4>
-          <p class="offer-desc">
-            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Stainless Steel Strap
-          </p>
-          <div class="offer-price">
-            <span class="currency">LKR</span>
-            <span class="current">15,000.00</span>
-            <span class="original">21,550.50</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
-
-<hr class="section-divider">
-
-<!------------------------------------------------------------------------------------------------------------------------>
-<!------------------------------------------------------------------------------------------------------------------------>
-
-<div class="products-grid">
+<!--NAVIFORCE-->
 
   <!--MEN 12-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-12.html?id=1" class="card-link">
@@ -505,7 +462,46 @@
 </div>
 
 
+
 <hr class="section-divider">
+
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
+
+<h2 style="color: #917c4c">Special Offer</h2>
+
+<div class="special-offer-wrapper">
+
+  <div class="special-offer">
+    <!-- Special‑offer items -->
+    <a href="src/main/resources/pages/couples/Couple-2.html?id=10" class="offer-link offer-item">
+      <div class="offer-watch">
+        <div class="offer-image">
+          <video autoplay muted loop playsinline>
+            <source src="src/main/resources/assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <!--<img src="../../assets/couples/2/couple 2 - 14.png" alt="Couple Watch">-->
+        </div>
+
+        <div class="offer-details">
+          <h4>Couple POEDAGAR Luxury Watches</h4>
+          <p class="offer-desc">
+            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Stainless Steel Strap
+          </p>
+          <div class="offer-price">
+            <span class="currency">LKR</span>
+            <span class="current">15,000.00</span>
+            <span class="original">21,550.50</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+
+<hr class="section-divider">
+
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
