--- a/index.html
+++ b/index.html
@@ -474,18 +474,21 @@
   }
 
   function shuffleCards() {
-    const grid = document.querySelector('#dynamicContent .products-grid');
-    if (!grid) return;
+    const allGrids = document.querySelectorAll('#dynamicContent .products-grid');
 
-    // Fisher-Yates – safer than Math.random()-0.5 for large lists
-    const arr = Array.from(grid.children);
-    for (let i = arr.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-    }
-    grid.innerHTML = '';
-    arr.forEach(c => grid.appendChild(c));
+    allGrids.forEach(grid => {
+      const cards = Array.from(grid.children);
+      for (let i = cards.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [cards[i], cards[j]] = [cards[j], cards[i]];
+      }
+
+      // Clear and re-append
+      grid.innerHTML = '';
+      cards.forEach(card => grid.appendChild(card));
+    });
   }
+
 
   /* ---------------- Bootstrapping ---------------- */
   function initOnce() {
